[gd_scene load_steps=5 format=3 uid="uid://g2qpjclpm3y"]

[ext_resource type="Script" uid="uid://caqbvb5h7p46i" path="res://scenes/main/main.gd" id="1_hyk8p"]

[sub_resource type="Gradient" id="Gradient_ifgtf"]
colors = PackedColorArray(0.858824, 0.933333, 0.933333, 1, 0.262934, 0.262932, 0.262932, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vom5j"]
gradient = SubResource("Gradient_ifgtf")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vom5j"]
bg_color = Color(0.346569, 0.346569, 0.346569, 0.196078)
border_width_bottom = 1
border_color = Color(0.262745, 0.262745, 0.262745, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 5

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hyk8p")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_vom5j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.5
offset_right = 150.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vom5j")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_font_sizes/font_size = 18
text = "game.size"
horizontal_alignment = 1

[node name="SmallSizeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "game.size-small"

[node name="MidSizeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "game.size-mid"

[node name="BigSizeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "game.size-big"

[connection signal="pressed" from="VBoxContainer/SmallSizeButton" to="." method="_on_small_size_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MidSizeButton" to="." method="_on_mid_size_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BigSizeButton" to="." method="_on_big_size_button_pressed"]
